try to fix the mobile bug

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,7 @@
         <h1 class="headline">D&D History</h1>
     </div>
 
-    <div id="session-container">
-
-    </div>
+    <div id="session-container"></div>
 
     <!-- Kreis mit plus unten zum sessions hinzufügen -->
     <div id="adder-circle">
