--- a/public/index.html
+++ b/public/index.html
@@ -41,12 +41,9 @@
         <!-- <div class="session" ... -->
         <input type="text" class="text-input">
         <div class="deletesymbol">
-            <!--
-<svg width="36" height="36">
+            <svg class="svg-minus">
                     <rect x="9" y="17" width="18" height="2" style="fill:white;"/>
                 </svg>
-
-           -->
         </div>
     </script>
 
