--- a/public/index.html
+++ b/public/index.html
@@ -40,16 +40,7 @@
     <script id="editable-session-template" type="text/template">
         <!-- <div class="session" ... -->
         <input type="text" class="text-input">
-
-        <div class="deletesymbol">
-            <!--
- <svg class="svg-minus">
-                    <rect x="9" y="17" width="18" height="2" style="fill:white;"/>
-                </svg>
-
-          -->
-        </div>
-
+        <img src="img/delete-symbol.svg" alt="" class="deletesymbol">
     </script>
 
     <script id="session-template" , type="text/template">
