--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- logo Überschrift und Menuebutton-->
     <div class="header">
-        <img src="img/DND-Logo.svg" alt="" class="logo">
+        <div class="logo"></div>
         <h1 class="headline">D&D History</h1>
     </div>
 
