--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
 <body>
     <!-- logo Überschrift und Menuebutton-->
     <div class="header">
-        <div class="logo"></div>
+        <object type="image/svg+xml" data="img/DND-Logo.svg">
+            </object>
         <h1 class="headline">D&D History</h1>
     </div>
 
