--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,7 @@
 <body>
     <!-- logo Überschrift und Menuebutton-->
     <div class="header">
-        <object type="image/svg+xml" data="img/DND-Logo.svg">
-            </object>
+        <embed type="image/svg+xml" src="img/DND-Logo.svg" />
         <h1 class="headline">D&D History</h1>
     </div>
 
