fixed some minor stuff

--- a/public/index.html
+++ b/public/index.html
@@ -22,19 +22,7 @@
         <h1 class="headline">D&D History</h1>
     </div>
 
-    <div id="session-container">
-        <div class="session">
-            <div class="face">
-                <a href="session.html">
-                    <p class="text-input">Session 1</p>
-                </a>
-                <img src="img/edit-symbol.svg" alt="" class="editsymbol">
-            </div>
-        </div>
-
-
-
-    </div>
+    <div id="session-container"></div>
 
     <!-- Kreis mit plus unten zum sessions hinzufügen -->
     <div id="adder-circle">
