structured entire code

--- a/public/index.html
+++ b/public/index.html
@@ -40,13 +40,15 @@
     <!--templates-->
     <script id="editable-face-template" type="text/template">
         <!-- <div class="session" ... -->
-        <input type="text" class="text-input">
+        <!--<div class="face" ... -->
+        <input type="text" class="body-input">
     </script>
 
-    <script id="face-template" , type="text/template">
+    <script id="normal-face-template" , type="text/template">
         <!-- <div class="session" ... -->
+        <!-- <div class="face" ... -->
         <a href="session.html">
-            <p class="text-input">{{sessionName}}</p>
+            <p class="body-input"></p>
         </a>
         <img src="img/edit-symbol.svg" alt="" class="editsymbol">
     </script>
