--- a/public/session.html
+++ b/public/session.html
@@ -40,17 +40,17 @@
     <!--templates-->
     <script id="editable-face-template" type="text/template">
         <!-- <div class="adventure-card" ... -->
-        <input type="text" class="card-header-input" placeholder="Überschrift">
+        <input type="text" class="header-input" placeholder="Überschrift">
         <p class="date">{{date}}</p>
-        <textarea class="card-body-input" placeholder="was ist passiert?"></textarea>
+        <textarea class="body-input" placeholder="was ist passiert?"></textarea>
     </script>
 
-    <script id="face-template" , type="text/template">
+    <script id="normal-face-template" , type="text/template">
         <!-- <div class="adventure-card" ... -->
-        <p class="card-header-input">{{headerText}}</p>
+        <p class="header-input"></p>
         <p class="date">{{date}}</p>
-        <p class="card-body-input">{{bodyText}}</p>
-        <p class="min-max">{{minmax}}</p>
+        <p class="body-input"></p>
+        <p class="min-max"></p>
         <img src="img/edit-symbol.svg" alt="" class="editsymbol">
     </script>
 
