--- a/public/session.html
+++ b/public/session.html
@@ -12,13 +12,15 @@
     <link href="https://fonts.googleapis.com/css?family=Marcellus&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.1.0/mustache.min.js"></script>
     <script src="js/session.js" async></script>
-
 </head>
 
 <body>
     <!-- logo Überschrift-->
     <div class="header">
-        <embed type="image/svg+xml" src="img/DND-Logo.svg" />
+        <a href="index.html" id="return-arrow-link">
+            <img src="img/Return Arrow.svg" id="return-arrow" />
+        </a>
+        <embed type="image/svg+xml" src="img/DND-Logo.svg" id="dragon-logo" />
         <h1 class="headline">D&D History</h1>
     </div>
 
