reimplemented the minimizer functionality and started first tries with socket.io

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,6 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Marcellus&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.1.0/mustache.min.js"></script>
-    <script src="js/index.js" async></script>
-
 </head>
 
 <body>
@@ -53,6 +50,10 @@
         <img src="img/edit-symbol.svg" alt="" class="editsymbol">
     </script>
 
+    <!--include scripts-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.1.0/mustache.min.js"></script>
+    <script src="js/containerBuilder.js"></script>
+    <script src="js/index.js"></script>
 
 </body>
 
