--- a/public/session.html
+++ b/public/session.html
@@ -10,8 +10,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/session.css">
     <link href="https://fonts.googleapis.com/css?family=Marcellus&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.1.0/mustache.min.js"></script>
-    <script src="js/session.js" async></script>
 </head>
 
 <body>
@@ -52,10 +50,15 @@
         <p class="header-input"></p>
         <p class="date">{{date}}</p>
         <p class="body-input"></p>
-        <p class="min-max"></p>
+        <p class="minimizer">verkleinern</p>
         <img src="img/edit-symbol.svg" alt="" class="editsymbol">
     </script>
 
+    <!--include scripts-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.1.0/mustache.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="js/containerBuilder.js"></script>
+    <script src="js/session.js"></script>
 
 </body>
 
