implemented saving functions on serverside

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
     <script id="normal-face-template" , type="text/template">
         <!-- <div class="session" ... -->
         <!-- <div class="face" ... -->
-        <a href="session.html">
+        <a href="session.html" class="link">
             <p class="body-input"></p>
         </a>
         <img src="img/edit-symbol.svg" alt="" class="editsymbol">
@@ -52,6 +52,7 @@
 
     <!--include scripts-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.1.0/mustache.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="js/containerBuilder.js"></script>
     <script src="js/index.js"></script>
 
